--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
 		"lib": ["ES2022", "dom"],
 		"module": "CommonJS",
 		"target": "ES2022",
-		"declaration": false,
-		"declarationMap": false,
+		"declaration": true,
+		"declarationMap": true,
 		"sourceMap": false,
 		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true,
